fix search z-index

--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -20,6 +20,10 @@
   transition: opacity 0.3s, transform 0.3s;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 
+  &.hide {
+    z-index: 101 !important;
+  }
+
   &.nav-fixed.fixed {
     position: fixed;
     top: 0;
